--- a/scratch.html
+++ b/scratch.html
@@ -31,8 +31,8 @@ Why is soccer so popular
   </ol>
   </div>
   <br>
-  <img src="../assets/img/Manchester United.jpg" alt= "Manchester United in Old Trafford" width="200">
-  <img src="../assets/img/street soccer.jpg" alt= "Kids playing soccer in street" width="200" >
+  <img src="assets/img/Manchester United.jpg" alt= "Manchester United in Old Trafford" width="200">
+  <img src="assets/img/street soccer.jpg" alt= "Kids playing soccer in street" width="200" >
 </b>
 <div>
 Soccer can be played anywhere and brings excitement to the lives of everyone.
